--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
@@ -2,13 +2,14 @@
     <kt-portlet-body>
         <div class="container">
             <form action="" [formGroup]="personalForm">
-                <div *ngIf="controls.userType.value === 'Individual' || controls.userType.value === ''"
+                <div *ngIf="(customerDetails.moduleId == 3 && customerDetails.userType === 'Individual') || customerDetails.moduleId == 1"
                     class="row justify-content-center kt-margin-t-30">
                     <div class="col-12">
                         <div class="row">
                             <div class="col-6">
                                 <div class="row">
-                                    <div class="offset-1 kt-margin-r-25 profile-div">
+                                    <div class="offset-1 kt-margin-r-25 profile-div"
+                                        [class.profileRequired]="controls.profileImage.touched && controls.profileImage.invalid">
                                         <img *ngIf="!controls.profileImg.value" class=""
                                             src="../../../../../../assets/media/icons/user.png" alt="" />
                                         <img *ngIf="controls.profileImg.value" class="profile-pic"
@@ -58,7 +59,8 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-3 offset-1 form-label">
-                                        <label class="mandatory">Gender</label>
+                                        <label
+                                            [class.mandatory]="customerDetails.moduleId == 1 || customerDetails.moduleId == 3 && customerDetails.userType === 'Individual'">Gender</label>
                                     </div>
                                     <div class="col-7">
                                         <select formControlName="gender" class="form-control" (change)="ageValidation()"
@@ -250,7 +252,7 @@
                     </div>
                 </div>
 
-                <div *ngIf="controls.userType.value === 'Corporate'" class="kt-margin-t-30">
+                <div *ngIf="customerDetails.userType === 'Corporate'" class="kt-margin-t-30">
                     <div class="row  kt-margin-t-20">
                         <div class="col-6">
                             <div class="row">
@@ -280,9 +282,10 @@
                                     <input type="text" class="form-control" formControlName="alternateEmail"
                                         placeholder="abc@gmail.com"
                                         [class.isError]="controls.alternateEmail.touched && controls.alternateEmail.invalid">
-                                        <mat-error *ngIf="controls.alternateEmail.errors?.pattern && controls.alternateEmail.touched">
-                                            Invalid Input
-                                        </mat-error>
+                                    <mat-error
+                                        *ngIf="controls.alternateEmail.errors?.pattern && controls.alternateEmail.touched">
+                                        Invalid Input
+                                    </mat-error>
                                 </div>
                             </div>
                         </div>
