Deposit status bug resolved

--- a/gold-admin-frontend/src/app/views/partials/components/payment-dialog/payment-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/payment-dialog/payment-dialog.component.html
@@ -169,7 +169,7 @@
                         </div>
                     </div>
 
-                    <div *ngIf="controls.depositStatus.value">
+                    <div *ngIf="data.name == 'deposit'">
                         <div class="row kt-margin-b-15">
                             <div class="col-4 form-label mandatory">
                                 <mat-label class="kt-padding-l-10">Deposit Status</mat-label>
